// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<InputField /> Should apply error class correctly. 1`] = `
<div
  class="form-field"
>
   
  <input
    class="error"
    placeholder="placeholder"
    type="text"
  />
</div>
`;

exports[`<InputField /> Should apply valid class correctly. 1`] = `
<div
  class="form-field"
>
   
  <input
    class="valid"
    placeholder="placeholder"
    type="text"
  />
</div>
`;

exports[`<InputField /> Should match snapshot. 1`] = `
<div
  class="form-field"
>
   
  <input
    class=""
    placeholder="placeholder"
    type="text"
  />
</div>
`;
